compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__bit_arrays__sized_little_endian.snap
---
source: compiler-core/src/fsharp/tests/bit_arrays.rs
expression: "\nfn go() {\n  <<256:16-little>>\n}\n"
---
module rec my.``mod``

let private go () = begin
    BitArray.Create(
        { endianness = Some BitArrayEndianness.Little; size = Some(16L); unit = None; signed = None; value = BitArraySegmentValue.Int(256L) }
    )
end
