compiler-core/src/fsharp/tests/snapshots/gleam_core__fsharp__tests__bit_arrays__variable.snap
---
source: compiler-core/src/fsharp/tests/bit_arrays.rs
expression: "\nfn go(x) {\n  <<256, 4, x>>\n}\n"
---
module rec my.``mod``

let private go (x: int64) = begin
    BitArray.Create(
        { endianness = None; size = None; unit = None; signed = None; value = BitArraySegmentValue.Int(256L) }, 
        { endianness = None; size = None; unit = None; signed = None; value = BitArraySegmentValue.Int(4L) }, 
        { endianness = None; size = None; unit = None; signed = None; value = BitArraySegmentValue.Int(x) }
    )
end
